[package]
name = "input-system-demo"
version = "0.1.0"
edition = "2024"

[features]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"], optional = true }
frozen-collections = "0.9.1"
tinyset = "0.5.2"

[dev-dependencies]
sdl3 = {version = "0.17.3", features = ["ttf"]}
serde_yaml = "0.9.34"
font-kit = "0.14.3"

[[example]]
name = "sdl-demo"
required-features = ["serde"]
